<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.others.effectsbeauty.EffectsBeautyActivity">

    <im.zego.commontools.logtools.logLinearLayout
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/roomIDAndStreamID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logView"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RoomID:0024 PublishStreamID:0024"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/roomStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Room state"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/roomState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/roomIDAndStreamID"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/startPublishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/start_publishing"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/advancedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/document"
        android:background="@color/little_dark_grey"
        android:text="@string/info"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startPublishButton"
        android:background="@color/little_dark_grey"
        android:text="@string/document"
        android:textColor="@color/blue"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/effectsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/advancedTitle"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <TextView
            android:id="@+id/effectsBeautyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/enable_effects_beauty"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/effectsBeautySwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/effectsBeautySwitch"
            android:layout_marginTop="10dp"
            android:text="@string/beauty_whiten"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/whitenValueTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/effectsBeautySwitch"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="50"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/whitenSeekBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/effectsBeautySwitch"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/whitenValueTextView"
            android:max="100"
            android:min="0"
            android:progress="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/whitenSeekBar"
            android:layout_marginTop="10dp"
            android:text="@string/beauty_rosy"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rosyValueTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/whitenSeekBar"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="50"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/rosySeekBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/whitenSeekBar"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/rosyValueTextView"
            android:max="100"
            android:min="0"
            android:progress="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rosySeekBar"
            android:layout_marginTop="10dp"
            android:text="@string/beauty_smooth"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/smoothValueTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rosySeekBar"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="50"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/smoothSeekBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rosySeekBar"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/smoothValueTextView"
            android:max="100"
            android:min="0"
            android:progress="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smoothSeekBar"
            android:layout_marginTop="10dp"
            android:text="@string/beauty_sharpen"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sharpenValueTextView"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/smoothSeekBar"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="50"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/sharpenSeekBar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/smoothSeekBar"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/sharpenValueTextView"
            android:max="100"
            android:min="0"
            android:progress="50" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/effectsLayout"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="0dp">

        <TextView
            android:id="@+id/encodeResolutionTitle"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/encode_resolution"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/xEncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/encodeResolutionHeight"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@id/encodeResolutionHeight"
            android:layout_toLeftOf="@id/encodeResolutionHeight"
            android:text="x"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/encodeResolutionHeight"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_round"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="640"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/encodeResolutionWidth"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/xEncode"
            android:background="@drawable/edit_round"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="360"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/videoFpsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/encodeResolutionTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/video_fps"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/videoFps"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/videoBitrate"
            android:layout_toRightOf="@id/videoFpsTitle"
            android:background="@drawable/edit_round"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="15"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/videoBitrate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/encodeResolutionHeight"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_round"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="600"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/videoBitrateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/videoFpsTitle"
            android:layout_toLeftOf="@+id/videoBitrate"
            android:gravity="center"
            android:text="@string/video_bitrate"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>